--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,13 @@ background-color: black;
     height: 100%;
 
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+
+}
+
+h2 {
+    font-size: 4rem;
+    margin: 1rem;
 }
